tests/trybuild/multiple_retype.stderr
error: Only a single retype command is allowed per field
  --> tests/trybuild/multiple_retype.rs:11:41
   |
11 |     #[partial(NewStruct1(retype = bool, retype = u32))]
   |                                         ^^^^^^
